# exam-platform

./: .gitignore  README.md  SYSTEM_ANALYSIS_REPORT.md
examonline/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  test_full_e2e.py
examonline/apps/: test_api_edge_cases.py  test_models_advanced.py  test_serializers.py
examonline/apps/examination/: models.py
examonline/apps/examination/api/: serializers.py  taking_views.py  test_taking.py  test_taking_coverage.py  tests.py  urls.py  views.py
examonline/apps/examination/migrations/: 0004_alter_examinationinfo_create_time_and_more.py  0005_examinationinfo_exam_state_idx_and_more.py
examonline/apps/operation/: models.py
examonline/apps/operation/migrations/: 0003_alter_examcomments_add_time_alter_examcomments_id_and_more.py
examonline/apps/testpaper/: models.py
examonline/apps/testpaper/api/: serializers.py  tests.py  urls.py  views.py
examonline/apps/testpaper/migrations/: 0004_alter_testpapertestq_options_and_more.py
examonline/apps/testquestion/: models.py
examonline/apps/testquestion/api/: serializers.py  tests.py
examonline/apps/testquestion/migrations/: 0004_alter_optioninfo_create_time_alter_optioninfo_id_and_more.py
examonline/apps/user/: models.py  services.py
examonline/apps/user/api/: __init__.py  serializers.py  test_dashboard_coverage.py  (+3 more)
examonline/config/: api.py  base.py  local.py  production.py
examonline/core/: __init__.py  apps.py
examonline/core/api/: __init__.py  exceptions.py  fields.py  pagination.py  permissions.py  tests.py
examonline/docs/: api-test-results.md  database-normalization.md  troubleshooting.md
examonline/examonline/: urls.py  wsgi.py
(+148 files in other folders)
